[package]
name = "psci"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate renamed to smccc, please use that instead."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/smccc"
keywords = ["arm", "aarch64", "cortex-a", "psci"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
