[package]
name = "smccc"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Functions and constants for the Arm SMC Calling Convention (SMCCC) 1.4 and Arm Power State Coordination Interface (PSCI) 1.1 on aarch32 and aarch64."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/smccc"
keywords = ["arm", "aarch64", "cortex-a", "smccc", "psci"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
thiserror = { version = "2.0.12", default-features = false }

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
